name:               filepather
version:            0.3.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Tony Morris
synopsis:           Functions on System.FilePath
category:           Data
description:        Functions over @System.FilePath@ including a find function for recursing down directories.
homepage:           https://github.com/tonymorris/filepather
bug-reports:        https://github.com/tonymorris/filepather/issues
cabal-version:      >= 1.10
build-type:         Custom

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/filepather.git

flag                small_base
  description:      Choose the new, split-up base package.

Library
  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    directory >= 1.1,
                    filepath >= 1.2,
                    mtl >= 2,
                    comonad >= 1.1,
                    transformers >= 0.2,
                    data-lens >= 2.9,
                    comonad-transformers >= 2

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    System.FilePath.FilePather
                    System.FilePath.FilePather.FileType
                    System.FilePath.FilePather.RecursePredicate
                    System.FilePath.FilePather.FilterPredicate
                    System.FilePath.FilePather.FilePathPredicate
                    System.FilePath.FilePather.Find
                    System.FilePath.FilePather.LiftI

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
