name:                 filepather
version:              0.3.0
synopsis:             Functions on System.FilePath
description:
  Functions over @System.FilePath@ including a find function for recursing down directories.
license:              BSD3
license-file:         LICENCE
author:               Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:           Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
copyright:            Copyright (C) 2021 Tony Morris
category:             Test
build-type:           Simple
extra-source-files:   changelog.md
cabal-version:        >=1.10
homepage:             https://gitlab.com/tonymorris/filepather
bug-reports:          https://gitlab.com/tonymorris/filepather/issues
tested-with:          GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.5

source-repository     head
  type:               git
  location:           git@gitlab.com:tonymorris/filepather.git

library
  exposed-modules:
                      System.FilePath.FilePather
                      System.FilePath.FilePather.Find
                      System.FilePath.FilePather.ReadFilePath
                      System.FilePath.FilePather.ToFilePath
                      System.FilePath.FilePather.Posix

  build-depends:        base >= 4.8 && < 5
                      , bytestring >= 0.10 && < 0.11
                      , contravariant
                      , directory >= 1.3 && < 2
                      , filepath >= 1.4 && < 2
                      , lens >= 4 && < 6
                      , mmorph >= 1.1 && < 2
                      , mtl >= 2.2 && < 2.3
                      , semigroups >= 0.9 && < 0.19
                      , semigroupoids >= 5.2 && < 6
                      , transformers >= 0.5 && < 0.6

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
                      -ddump-splices
